Fix stretched portraits

--- a/styles/ferncombe.css
+++ b/styles/ferncombe.css
@@ -183,6 +183,7 @@
 }
 .ferncombe.journal-sheet section.journal-page-content .columns figure.portrait,
 #AdventureImporter-Compendium-ferncombe-Ferncombe-Adventure-3SLlEPjBKIvmVqsv section.journal-page-content .columns figure.portrait {
+  max-height: 200px;
   flex: 0 0 200px;
   margin: 0 0.2rem 0 1.2rem;
 }
