--- a/styles/less/text.less
+++ b/styles/less/text.less
@@ -120,6 +120,7 @@
     .columns {
       display: flex; 
       figure.portrait {
+        max-height: 200px;
         flex: 0 0 200px;
         margin: 0 0.2rem 0 1.2rem;
       }
